infrastructure/base/ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    toolkit.fluxcd.io/tenant: sre-team
    goldilocks.fairwinds.com/enabled: "true"
