infrastructure/base/ui/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - headlamp${clusterServicesDNSSuffix,,}
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
